--- a/style.css
+++ b/style.css
@@ -18,10 +18,28 @@
 .project-item{
     float: left;
     height: 200px;
-    background-color: aqua;
+   /* background-color: aqua;*/
     width: 32%;
     margin-right: 10px;
     margin-bottom: 10px;
     margin-left: 5px;
     border: 2px, solid red;
+}
+.ftr{
+    background-color: black;
+    margin-top: 5px;
+    height: 150px;
+    width:100%;
+    color: white;
+    padding-top: 20px;
+    padding-left: 10px;
+}
+.footer{
+    float:left;
+    width: 33%;
+}
+.link{
+    text-decoration: none;
+    display: block;
+    color:brown;
 }
